// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds notification views fetches notifications with a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "scene.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "assertion",
    "reasonSubject": "user(0)",
    "record": Object {
      "$type": "app.bsky.graph.assertion",
      "assertion": "app.bsky.graph.assertMember",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(1)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "dan.test",
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "handle": "carol.test",
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
      },
      "text": "of course",
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(4)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "dan.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "handle": "carol.test",
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(7)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(8)",
        "uri": "record(7)",
      },
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "did": "user(4)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "dan.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(1)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(9)",
  },
  Object {
    "author": Object {
      "did": "user(4)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(1)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "handle": "carol.test",
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(1)",
      },
    },
    "uri": "record(11)",
  },
]
`;

exports[`pds notification views fetches notifications without a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "scene.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "assertion",
    "reasonSubject": "user(0)",
    "record": Object {
      "$type": "app.bsky.graph.assertion",
      "assertion": "app.bsky.graph.assertMember",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(1)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "dan.test",
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "handle": "carol.test",
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
      },
      "text": "of course",
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(4)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "dan.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "handle": "carol.test",
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(7)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(8)",
        "uri": "record(7)",
      },
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "did": "user(4)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "dan.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(1)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(9)",
  },
  Object {
    "author": Object {
      "did": "user(4)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(1)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "handle": "carol.test",
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(1)",
      },
    },
    "uri": "record(11)",
  },
]
`;
